# Vulkan-inator

./: .gitignore  CMakeLists.txt  DAE_GraphicsProgramming_2.kdev4
.kdev4/: DAE_GraphicsProgramming_2.kdev4
Project/: CMakeLists.txt  main.cpp
Project/Thing/: Shader.cpp  Shader.h  ShaderModule.cpp  ShaderModule.h
Project/jul/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorPool.cpp  DescriptorPool.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GameTime.h  Input.cpp  Input.h  Material.cpp  Material.h  MathExtensions.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
Project/labwork/: Week01.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/shaders/: PBR.glsl  shader.vert  shader2D.vert  shader3D.frag  shader3D.vert  shader3D_Cartoon.frag  shader3D_Cartoon.vert  shader3D_Flat.vert
Project/vulkanbase/: VulkanBase-.cpp  VulkanBase.cpp  VulkanBase.h  VulkanGlobals.h  VulkanUtil.cpp  VulkanUtil.cpp.aSSijZ  VulkanUtil.h  Vulkanbase.cpp
resources/Car/: Subaru.mtl
resources/Diorama/: DioramaGP.mtl  DioramaGP_2.mtl
resources/Testing/: Jakub.mtl
